--- a/xinx/ui/about.ui
+++ b/xinx/ui/about.ui
@@ -40,10 +40,7 @@
    <item row="0" column="1" >
     <widget class="QLabel" name="m_labelVersion" >
      <property name="text" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:10pt; font-weight:600;">XINX trunk-svn (use Qt %1)&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+      <string>&lt;b>XINX trunk-svn (use Qt %1)&lt;/b></string>
      </property>
     </widget>
    </item>
@@ -85,11 +82,8 @@ p, li { white-space: pre-wrap; }
        <item>
         <widget class="QLabel" name="m_aboutLabel" >
          <property name="text" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal; text-decoration:none;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">XINX&lt;/span> Is Not only XML&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">(c) 2006-2007, Ulrich Van Den Hekke&lt;/p>&lt;/body>&lt;/html></string>
+          <string>&lt;p>&lt;b>XINX&lt;/b> Is Not only XML&lt;/p>
+&lt;p>(c) 2006-2007, Ulrich Van Den Hekke&lt;/p></string>
          </property>
          <property name="alignment" >
           <set>Qt::AlignCenter</set>
@@ -163,12 +157,6 @@ p, li { white-space: pre-wrap; }
            </disabled>
           </palette>
          </property>
-         <property name="html" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif'; font-size:9pt;">&lt;/p>&lt;/body>&lt;/html></string>
-         </property>
          <property name="textInteractionFlags" >
           <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::NoTextInteraction</set>
          </property>
@@ -237,12 +225,6 @@ p, li { white-space: pre-wrap; }
             </colorrole>
            </disabled>
           </palette>
-         </property>
-         <property name="html" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif'; font-size:9pt;">&lt;/p>&lt;/body>&lt;/html></string>
          </property>
          <property name="textInteractionFlags" >
           <set>Qt::LinksAccessibleByKeyboard|Qt::LinksAccessibleByMouse|Qt::NoTextInteraction</set>
