--- a/xinx/ui/mainform.ui
+++ b/xinx/ui/mainform.ui
@@ -760,10 +760,7 @@
     <string>Update project</string>
    </property>
    <property name="whatsThis" >
-    <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Call the update fonction of your &lt;span style=" font-style:italic;">revision control system&lt;/span> for all the project directory.&lt;/p>&lt;/body>&lt;/html></string>
+    <string>Call the update fonction of your &lt;i>revision control system&lt;/i> for all the project directory.</string>
    </property>
   </action>
   <action name="m_globalCommitToRCSAct" >
@@ -774,12 +771,8 @@ p, li { white-space: pre-wrap; }
     <string>Commit project</string>
    </property>
    <property name="whatsThis" >
-    <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Call the commit method of your &lt;span style=" font-style:italic;">revision control sytem&lt;/span> for all the project directory. An optional message can be added.&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-style:italic;">Only &lt;/span>&lt;span style=" font-weight:600; font-style:italic;">XINX&lt;/span>&lt;span style=" font-style:italic;"> managed files are commited to the repository.&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+    <string>&lt;p>Call the commit method of your &lt;i>revision control sytem&lt;/i> for all the project directory. An optional message can be added.&lt;/p>
+&lt;p>&lt;i>Only &lt;b>XINX&lt;/b> managed files are commited to the repository.&lt;/i>&lt;/p></string>
    </property>
   </action>
   <action name="m_cancelRCSOperationAct" >
@@ -851,10 +844,7 @@ p, li { white-space: pre-wrap; }
     <string>Toggled Flat View</string>
    </property>
    <property name="whatsThis" >
-    <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked the list is showed as flat instead of tree. Each list of file is preceded of a directory header.&lt;/p>&lt;/body>&lt;/html></string>
+    <string>If checked the list is showed as flat instead of tree. Each list of file is preceded of a directory header.</string>
    </property>
   </action>
   <action name="m_createTemplate" >
