--- a/xinx/ui/newprojectwizard_services.ui
+++ b/xinx/ui/newprojectwizard_services.ui
@@ -16,10 +16,7 @@
    <item row="0" column="0" >
     <widget class="QRadioButton" name="m_addWebServicesButton" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked the next page ask you the list of WSDL used to known params of the WebServices.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>If checked the next page ask you the list of WSDL used to known params of the WebServices.</string>
      </property>
      <property name="text" >
       <string>I want add some WebServices</string>
@@ -29,10 +26,7 @@ p, li { white-space: pre-wrap; }
    <item row="1" column="0" >
     <widget class="QRadioButton" name="m_noWebServicesButton" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Don"t manage web services in the project.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>Don't manage web services in the project.</string>
      </property>
      <property name="text" >
       <string>I don't want WebServices</string>
