--- a/xinx/ui/rcslogform.ui
+++ b/xinx/ui/rcslogform.ui
@@ -31,10 +31,7 @@
    <item row="0" column="0" >
     <widget class="QListWidget" name="m_rcsLogListWidget" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is where &lt;span style=" font-weight:600;">XINX&lt;/span> store it's message from &lt;span style=" font-style:italic;">revision control system&lt;/span> console.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>&lt;html>This is where &lt;b>XINX&lt;/b> store it's message from &lt;i>revision control system&lt;/i> console.</string>
      </property>
     </widget>
    </item>
