--- a/xinx/ui/replace.ui
+++ b/xinx/ui/replace.ui
@@ -51,12 +51,8 @@
      <item row="1" column="0" >
       <widget class="QCheckBox" name="m_replaceCheckBox" >
        <property name="whatsThis" >
-        <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked, &lt;span style=" font-weight:600;">XINX&lt;/span> replace the searched string by this  sting.&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If the search string is a &lt;span style=" font-style:italic;">regular expression&lt;/span>, you can use \1 or \2 for captured string. Captured string in the find string is in bracket.&lt;/p>&lt;/body>&lt;/html></string>
+        <string>&t;p>If checked, &lt;b>XINX&lt;/b> replace the searched string by this  sting.&lt;/p>
+&lt;p>If the search string is a &lt;i>regular expression&lt;/i>, you can use \1 or \2 for captured string. Captured string in the find string is in bracket.&lt;/p></string>
        </property>
        <property name="text" >
         <string>&amp;Replace by :</string>
@@ -66,12 +62,8 @@ p, li { white-space: pre-wrap; }
      <item row="0" column="1" >
       <widget class="QComboBox" name="m_comboFind" >
        <property name="whatsThis" >
-        <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Text to search in the editor. The search string can be &lt;span style=" font-style:italic;">string literal&lt;/span> or a &lt;span style=" font-style:italic;">regular expression&lt;/span> (if the corresponding checkbox is checked).&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">XINX&lt;/span> keep history of searched text.&lt;/p>&lt;/body>&lt;/html></string>
+        <string>&lt;p>Text to search in the editor. The search string can be &lt;i>string literal&lt;/i> or a &lt;i>regular expression&lt;/i> (if the corresponding checkbox is checked).&lt;/p>
+&lt;p>&lt;b>XINX&lt;/b> keep history of searched text.&lt;/p></string>
        </property>
        <property name="editable" >
         <bool>true</bool>
@@ -151,10 +143,7 @@ p, li { white-space: pre-wrap; }
      <item row="0" column="1" >
       <widget class="QGroupBox" name="m_directionGroupBox" >
        <property name="whatsThis" >
-        <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Direction where &lt;span style=" font-weight:600;">XINX&lt;/span> must go for search string.&lt;/p>&lt;/body>&lt;/html></string>
+        <string>Direction where &lt;b>XINX&lt;/b> must go for search string.</string>
        </property>
        <property name="title" >
         <string>Direction</string>
@@ -211,10 +200,7 @@ p, li { white-space: pre-wrap; }
      <item row="0" column="2" >
       <widget class="QGroupBox" name="m_selectionGroupBox" >
        <property name="whatsThis" >
-        <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If &lt;span style=" font-style:italic;">All&lt;/span> is checked &lt;span style=" font-weight:600;">XINX&lt;/span> search in the whole document, else &lt;span style=" font-weight:600;">XINX&lt;/span> search only in the selection.&lt;/p>&lt;/body>&lt;/html></string>
+        <string>If &lt;i>All&lt;/i> is checked &lt;b>XINX&lt;/b> search in the whole document, else &lt;b>XINX&lt;/b> search only in the selection.</string>
        </property>
        <property name="title" >
         <string>Extend</string>
@@ -279,10 +265,7 @@ p, li { white-space: pre-wrap; }
         <item>
          <widget class="QCheckBox" name="m_caseCheckBox" >
           <property name="whatsThis" >
-           <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked, &lt;span style=" font-weight:600;">XINX&lt;/span> search the case sensitive string.&lt;/p>&lt;/body>&lt;/html></string>
+           <string>If checked, &lt;b>XINX&lt;/b> search the case sensitive string.</string>
           </property>
           <property name="text" >
            <string>Match c&amp;ase</string>
@@ -292,10 +275,7 @@ p, li { white-space: pre-wrap; }
         <item>
          <widget class="QCheckBox" name="m_fromStartCheckBox" >
           <property name="whatsThis" >
-           <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked, &lt;span style=" font-weight:600;">XINX&lt;/span> search the word from the start of the document, else &lt;span style=" font-weight:600;">XINX&lt;/span> search from the cursor position.&lt;/p>&lt;/body>&lt;/html></string>
+           <string>If checked, &lt;b>XINX&lt;/b> search the word from the start of the document, else &lt;b>XINX&lt;/b> search from the cursor position.</string>
           </property>
           <property name="text" >
            <string>Search from &amp;start</string>
@@ -305,10 +285,7 @@ p, li { white-space: pre-wrap; }
         <item>
          <widget class="QCheckBox" name="m_wholeWordsCheckBox" >
           <property name="whatsThis" >
-           <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If unchecked, &lt;span style=" font-weight:600;">XINX&lt;/span> search string include in other word, else only whole word is searched.&lt;/p>&lt;/body>&lt;/html></string>
+           <string>If unchecked, &lt;b>XINX&lt;/b> search string include in other word, else only whole word is searched.</string>
           </property>
           <property name="text" >
            <string>&amp;Whole words</string>
@@ -318,10 +295,7 @@ p, li { white-space: pre-wrap; }
         <item>
          <widget class="QCheckBox" name="m_regularExpressionCheckBox" >
           <property name="whatsThis" >
-           <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked, &lt;span style=" font-weight:600;">XINX&lt;/span> use regular expression to match string.&lt;/p>&lt;/body>&lt;/html></string>
+           <string>If checked, &lt;b>XINX&lt;/b> use regular expression to match string.</string>
           </property>
           <property name="text" >
            <string>&amp;Use regular expression</string>
