--- a/xinx/ui/resultatServices.ui
+++ b/xinx/ui/resultatServices.ui
@@ -59,10 +59,7 @@
        <item row="1" column="0" >
         <widget class="QTextEdit" name="m_inputStreamTextEdit" >
          <property name="whatsThis" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Content of the selected input parameter&lt;/p>&lt;/body>&lt;/html></string>
+          <string>Content of the selected input parameter.</string>
          </property>
          <property name="readOnly" >
           <bool>true</bool>
@@ -72,10 +69,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="0" >
         <widget class="QComboBox" name="m_inputComboBox" >
          <property name="whatsThis" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">The list of the input parameter send to the &lt;span style=" font-style:italic;">web service&lt;/span>.&lt;/p>&lt;/body>&lt;/html></string>
+          <string>The list of the input parameter send to the &lt;i>web service&lt;/i>.</string>
          </property>
         </widget>
        </item>
@@ -107,10 +101,7 @@ p, li { white-space: pre-wrap; }
        <item row="1" column="0" >
         <widget class="QTextEdit" name="m_outputStreamTextEdit" >
          <property name="whatsThis" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Content of the selected result of the &lt;span style=" font-style:italic;">web service&lt;/span>.&lt;/p>&lt;/body>&lt;/html></string>
+          <string>Content of the selected result of the &lt;i>web service&lt;/i>.</string>
          </property>
          <property name="readOnly" >
           <bool>true</bool>
@@ -120,10 +111,7 @@ p, li { white-space: pre-wrap; }
        <item row="0" column="0" >
         <widget class="QComboBox" name="m_outputComboBox" >
          <property name="whatsThis" >
-          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">List of result returned by the &lt;span style=" font-style:italic;">web services&lt;/span>.&lt;/p>&lt;/body>&lt;/html></string>
+          <string>List of result returned by the &lt;i>web services&lt;/i>.</string>
          </property>
         </widget>
        </item>
