--- a/xinx/ui/xmlpresentationwidget.ui
+++ b/xinx/ui/xmlpresentationwidget.ui
@@ -34,10 +34,7 @@
    <item row="0" column="0" >
     <widget class="QToolButton" name="m_refreshToolButton" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Refresh the list of file present in the &lt;span style=" font-style:italic;">log&lt;/span> directory.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>Refresh the list of file present in the &lt;i>log&lt;/i> directory.</string>
      </property>
      <property name="text" >
       <string>...</string>
@@ -50,12 +47,8 @@ p, li { white-space: pre-wrap; }
    <item row="0" column="1" colspan="2" >
     <widget class="QComboBox" name="m_presentationComboBox" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">List of file in the &lt;span style=" font-style:italic;">log&lt;/span> directory. If you select a file the view is updated with the content of the file.&lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">You can open a file of the list, or a file in another directory.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>List of file in the &lt;i>log&lt;/i> directory. If you select a file the view is updated with the content of the file.&lt;/p>
+&lt;p>You can open a file of the list, or a file in another directory.&lt;/p></string>
      </property>
     </widget>
    </item>
@@ -72,10 +65,7 @@ p, li { white-space: pre-wrap; }
    <item row="2" column="0" >
     <widget class="QToolButton" name="m_clearToolButton" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Clear the text filter at right.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>Clear the text filter at right.</string>
      </property>
      <property name="text" >
       <string>...</string>
@@ -88,22 +78,15 @@ p, li { white-space: pre-wrap; }
    <item row="2" column="1" >
     <widget class="QLineEdit" name="m_filtreLineEdit" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Filter to use in the view. &lt;span style=" font-weight:600;">XINX&lt;/span> search node where name match the filter (literal or regular expression).&lt;/p>&lt;/body>&lt;/html></string>
+      <string>Filter to use in the view. &lt;b>XINX&lt;/b> search node where name match the filter (literal or regular expression).</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2" >
     <widget class="QComboBox" name="m_filterComboBox" >
      <property name="whatsThis" >
-      <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
-p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If &lt;span style=" font-style:italic;">Sub-element&lt;/span> is selected when an element is finded, all sub-element is showed. &lt;/p>
-&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If &lt;span style=" font-style:italic;">None&lt;/span> is selected only matched element is showed.&lt;/p>&lt;/body>&lt;/html></string>
+      <string>&lt;p>If &lt;i>Sub-element&lt;/i> is selected when an element is finded, all sub-element is showed. &lt;/p>
+&lt;p>If &lt;i>None&lt;/i> is selected only matched element is showed.&lt;/p></string>
      </property>
      <item>
       <property name="text" >
