--- a/xinx/ui/snipetproperty.ui
+++ b/xinx/ui/snipetproperty.ui
@@ -5,22 +5,158 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>685</width>
-    <height>379</height>
+    <width>611</width>
+    <height>443</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Template property</string>
   </property>
   <layout class="QGridLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
-    <number>6</number>
-   </property>
-   <item rowspan="2" row="0" column="1" >
+   <item row="0" column="0" >
+    <widget class="QGroupBox" name="groupBox" >
+     <property name="title" >
+      <string>&amp;Description</string>
+     </property>
+     <layout class="QGridLayout" >
+      <property name="leftMargin" >
+       <number>9</number>
+      </property>
+      <property name="topMargin" >
+       <number>9</number>
+      </property>
+      <property name="rightMargin" >
+       <number>9</number>
+      </property>
+      <property name="bottomMargin" >
+       <number>9</number>
+      </property>
+      <property name="horizontalSpacing" >
+       <number>6</number>
+      </property>
+      <property name="verticalSpacing" >
+       <number>6</number>
+      </property>
+      <item row="4" column="0" >
+       <widget class="QLabel" name="label_4" >
+        <property name="text" >
+         <string>&amp;Category :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_categoryComboBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_2" >
+        <property name="text" >
+         <string>&amp;Icon :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_iconLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" >
+       <widget class="QLabel" name="label" >
+        <property name="text" >
+         <string>&amp;Name :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_nameLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="2" >
+       <widget class="QTextEdit" name="m_descriptionTextEdit" />
+      </item>
+      <item row="1" column="2" >
+       <widget class="QLineEdit" name="m_iconLineEdit" />
+      </item>
+      <item row="4" column="2" >
+       <widget class="QComboBox" name="m_categoryComboBox" >
+        <property name="editable" >
+         <bool>true</bool>
+        </property>
+        <item>
+         <property name="text" >
+          <string>Others</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="5" column="0" colspan="2" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>&amp;Description :</string>
+        </property>
+        <property name="alignment" >
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+        <property name="buddy" >
+         <cstring>m_descriptionTextEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2" >
+       <widget class="QLineEdit" name="m_nameLineEdit" />
+      </item>
+      <item row="3" column="2" >
+       <widget class="QLineEdit" name="m_keyLineEdit" />
+      </item>
+      <item row="3" column="0" >
+       <widget class="QLabel" name="label_5" >
+        <property name="text" >
+         <string>&amp;Snipet key :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_keyLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_6" >
+        <property name="text" >
+         <string>&amp;Extention :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_extLineEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2" >
+       <widget class="QLineEdit" name="m_extLineEdit" />
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="0" column="1" >
+    <widget class="QGroupBox" name="m_paramGroupBox" >
+     <property name="minimumSize" >
+      <size>
+       <width>250</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="title" >
+      <string>&amp;Parameter</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2" >
     <widget class="QGroupBox" name="m_templateGroupBox" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Minimum" hsizetype="Preferred" >
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize" >
+      <size>
+       <width>0</width>
+       <height>100</height>
+      </size>
+     </property>
      <property name="title" >
       <string>&amp;Template text :</string>
      </property>
@@ -28,11 +164,20 @@
    </item>
    <item row="2" column="0" colspan="2" >
     <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
      <property name="spacing" >
       <number>6</number>
+     </property>
+     <property name="leftMargin" >
+      <number>0</number>
+     </property>
+     <property name="topMargin" >
+      <number>0</number>
+     </property>
+     <property name="rightMargin" >
+      <number>0</number>
+     </property>
+     <property name="bottomMargin" >
+      <number>0</number>
      </property>
      <item>
       <spacer>
@@ -68,102 +213,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="1" column="0" >
-    <widget class="QGroupBox" name="m_paramGroupBox" >
-     <property name="title" >
-      <string>&amp;Parameter</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" >
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="title" >
-      <string>&amp;Description</string>
-     </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
-       <number>9</number>
-      </property>
-      <property name="spacing" >
-       <number>6</number>
-      </property>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="label_4" >
-        <property name="text" >
-         <string>&amp;Category :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_categoryComboBox</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_2" >
-        <property name="text" >
-         <string>&amp;Icon :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_iconLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0" >
-       <widget class="QLabel" name="label" >
-        <property name="text" >
-         <string>&amp;Name :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_nameLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="2" >
-       <widget class="QTextEdit" name="m_descriptionTextEdit" />
-      </item>
-      <item row="1" column="2" >
-       <widget class="QLineEdit" name="m_iconLineEdit" />
-      </item>
-      <item row="3" column="2" >
-       <widget class="QComboBox" name="m_categoryComboBox" >
-        <property name="editable" >
-         <bool>true</bool>
-        </property>
-        <item>
-         <property name="text" >
-          <string>Others</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="4" column="0" colspan="2" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>&amp;Description :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_descriptionTextEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2" >
-       <widget class="QLineEdit" name="m_nameLineEdit" />
-      </item>
-      <item row="2" column="2" >
-       <widget class="QLineEdit" name="m_keyLineEdit" />
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_5" >
-        <property name="text" >
-         <string>&amp;Snipet key :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_keyLineEdit</cstring>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
    </item>
   </layout>
  </widget>
